--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,8 @@ add_subdirectory(po)
 add_subdirectory(src)
 add_subdirectory(data)
 add_subdirectory(list)
+
+fcitx5_translate_desktop_file(org.fcitx.fcitx5-hangul.metainfo.xml.in
+                              org.fcitx.fcitx5-hangul.metainfo.xml XML)
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/org.fcitx.fcitx5-hangul.metainfo.xml" DESTINATION ${CMAKE_INSTALL_DATADIR}/metainfo)
+feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
