Rename metainfo add set locale dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,20 +8,21 @@ include(FeatureSummary)
 include(GNUInstallDirs)
 include(ECMUninstallTarget)
 
-find_package(Fcitx5Core REQUIRED)
+find_package(Fcitx5Core 5.0.2 REQUIRED)
 find_package(Gettext REQUIRED)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(Hangul IMPORTED_TARGET "libhangul>=0.0.12" REQUIRED)
 
 include("${FCITX_INSTALL_CMAKECONFIG_DIR}/Fcitx5Utils/Fcitx5CompilerSettings.cmake")
 add_definitions(-DFCITX_GETTEXT_DOMAIN=\"fcitx5-hangul\" -D_GNU_SOURCE)
+fcitx5_add_i18n_definition()
 
 add_subdirectory(po)
 add_subdirectory(src)
 add_subdirectory(data)
 add_subdirectory(list)
 
-fcitx5_translate_desktop_file(org.fcitx.fcitx5-hangul.metainfo.xml.in
-                              org.fcitx.fcitx5-hangul.metainfo.xml XML)
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/org.fcitx.fcitx5-hangul.metainfo.xml" DESTINATION ${CMAKE_INSTALL_DATADIR}/metainfo)
+fcitx5_translate_desktop_file(org.fcitx.Fcitx5.Addon.Hangul.metainfo.xml.in
+                              org.fcitx.Fcitx5.Addon.Hangul.metainfo.xml XML)
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/org.fcitx.Fcitx5.Addon.Hangul.metainfo.xml" DESTINATION ${CMAKE_INSTALL_DATADIR}/metainfo)
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
