--- a/src/hangul-addon.conf.in.in
+++ b/src/hangul-addon.conf.in.in
@@ -2,6 +2,7 @@
 Name=Hangul
 Comment=Hangul Wrapper For Fcitx
 Category=InputMethod
+Version=@PROJECT_VERSION@
 Library=hangul
 Type=SharedLibrary
 OnDemand=True
