--- a/org.fcitx.Fcitx5.Addon.Hangul.metainfo.xml.in
+++ b/org.fcitx.Fcitx5.Addon.Hangul.metainfo.xml.in
@@ -3,7 +3,7 @@
   <id>org.fcitx.Fcitx5.Addon.Hangul</id>
   <extends>org.fcitx.Fcitx5</extends>
   <metadata_license>CC0-1.0</metadata_license>
-  <project_license>GPL-2.0+</project_license>
+  <project_license>LGPL-2.1+</project_license>
   <name>Hangul for Fcitx 5</name>
   <summary>Hangul engine for Fcitx 5</summary>
   <url type="homepage">https://fcitx-im.org</url>
