--- a/list/CMakeLists.txt
+++ b/list/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(gen_list gen_list.c)
-target_link_libraries (gen_list PkgConfig::Hangul)
+target_link_libraries (gen_list ${HANGUL_TARGET})
