--- a/src/hangul-addon.conf.in.in
+++ b/src/hangul-addon.conf.in.in
@@ -3,7 +3,7 @@ Name=Hangul
 Comment=Hangul Wrapper For Fcitx
 Category=InputMethod
 Version=@PROJECT_VERSION@
-Library=hangul
+Library=libhangul
 Type=SharedLibrary
 OnDemand=True
 Configurable=True
