--- a/org.fcitx.Fcitx5.Addon.Hangul.metainfo.xml.in
+++ b/org.fcitx.Fcitx5.Addon.Hangul.metainfo.xml.in
@@ -10,6 +10,7 @@
   <url type="bugtracker">https://github.com/fcitx/fcitx5-hangul/issues</url>
   <project_group>Fcitx</project_group>
   <releases>
+    <release version="5.1.1" date="2023-11-01"/>
     <release version="5.1.0" date="2023-08-14"/>
     <release version="5.0.11" date="2023-03-10"/>
     <release version="5.0.10" date="2022-07-03"/>
