--- a/org.fcitx.Fcitx5.Addon.Hangul.metainfo.xml.in
+++ b/org.fcitx.Fcitx5.Addon.Hangul.metainfo.xml.in
@@ -6,8 +6,12 @@
   <project_license>LGPL-2.1+</project_license>
   <name>Hangul for Fcitx 5</name>
   <summary>Hangul engine for Fcitx 5</summary>
+  <developer id="org.fcitx-im">
+      <name>The Fcitx Team</name>
+  </developer>
   <url type="homepage">https://fcitx-im.org</url>
   <url type="bugtracker">https://github.com/fcitx/fcitx5-hangul/issues</url>
+  <url type="vcs-browser">https://github.com/fcitx/fcitx5-hangul</url>
   <project_group>Fcitx</project_group>
   <releases>
     <release version="5.1.2" date="2024-02-28"/>
