--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,13 @@ option(ENABLE_TEST "Build Test" On)
 option(ENABLE_COVERAGE "Build the project with gcov support (Need ENABLE_TEST=On)" Off)
 
 if (NOT DEFINED HANGUL_TARGET)
-    pkg_check_modules(Hangul IMPORTED_TARGET "libhangul>=0.0.12" REQUIRED)
-    set(HANGUL_TARGET PkgConfig::Hangul)
+    find_package(hangul CONFIG)
+    if (TARGET hangul)
+        set(HANGUL_TARGET hangul)
+    else()
+        pkg_check_modules(Hangul IMPORTED_TARGET "libhangul>=0.0.12" REQUIRED)
+        set(HANGUL_TARGET PkgConfig::Hangul)
+    endif()
 endif()
 
 include("${FCITX_INSTALL_CMAKECONFIG_DIR}/Fcitx5Utils/Fcitx5CompilerSettings.cmake")
