--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,11 +18,11 @@ option(ENABLE_TEST "Build Test" On)
 option(ENABLE_COVERAGE "Build the project with gcov support (Need ENABLE_TEST=On)" Off)
 
 if (NOT DEFINED HANGUL_TARGET)
-    find_package(hangul CONFIG)
+    find_package(hangul CONFIG 0.2.0)
     if (TARGET hangul)
         set(HANGUL_TARGET hangul)
     else()
-        pkg_check_modules(Hangul IMPORTED_TARGET "libhangul>=0.0.12" REQUIRED)
+        pkg_check_modules(Hangul IMPORTED_TARGET "libhangul>=0.2.0" REQUIRED)
         set(HANGUL_TARGET PkgConfig::Hangul)
     endif()
 endif()
