--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,13 +18,12 @@ option(ENABLE_TEST "Build Test" On)
 option(ENABLE_COVERAGE "Build the project with gcov support (Need ENABLE_TEST=On)" Off)
 
 if (NOT DEFINED HANGUL_TARGET)
-    find_package(hangul CONFIG 0.2.0)
-    if (TARGET hangul)
-        set(HANGUL_TARGET hangul)
-    else()
-        pkg_check_modules(Hangul IMPORTED_TARGET "libhangul>=0.2.0" REQUIRED)
-        set(HANGUL_TARGET PkgConfig::Hangul)
-    endif()
+    pkg_check_modules(Hangul IMPORTED_TARGET "libhangul>=0.2.0" REQUIRED)
+    set(HANGUL_TARGET PkgConfig::Hangul)
+endif()
+
+if ("${Hangul_VERSION}" VERSION_GREATER_EQUAL "0.2.0")
+    add_definitions(-DFCITX_HANGUL_VERSION_0_2)
 endif()
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
